[package]
name = "factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
serde = {version = "1.0.130", features = ["derive"] }
ron = "0.7.0"

# Allways optimize deps
[profile.dev.package."*"]
opt-level = 3
